--- a/src/index.html
+++ b/src/index.html
@@ -27,32 +27,50 @@
     <!-- End of Top bar -->
 
     <!-- NavBar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <a class="navbar-brand" href="#"><img src="img/logo-pink.svg" alt="hum-logo" height="50" width="268" id="humLogo"></a>
+  <nav class="navbar navbar-expand-lg navbar-light pt-0">
+    <a class="navbar-brand" href="#"><img src="img/logo-pink.svg" alt="hum-logo" height="50" width="268" id="humLogo" style="margin-left: 28.5rem;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">PRODUCTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">BLOG</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">OUR NUTRITIONISTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">GET STARTED</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">BAG<span class="badge">0</span></a>
-        </li>
-      </ul>
+      <div class="navAlign">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link products" href="#">PRODUCTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link blog" href="#">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link OurNutritionists" href="#">OUR NUTRITIONISTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link getStarted" href="#">GET STARTED</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link bag" href="#">BAG<span class="badge">0</span></a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
-    
+<!-- End of Navbar -->
+<!-- BG Image -->
+<div class="bgImage"><img src="img/hsh-bg.png" alt="back ground image"></div>
+<div class="row">
+  <div class="col">
+    <h1 class="sixDay">
+      TRY A 6-DAY SUPPLY<br/>
+      OF HAIR SWEET<br/>
+      HAIR GUMMIES<br/>
+    </h1>
+    <div class="sweetTreat">
+      <p>A Sweet Treat For Naturally Stronger, Healthier Hair</p>
+      <p>Plus $10 off code & Nutritionist report</p>
+    </div>
+  </div>
+</div>
+
 
 
 
