finished the test

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
     crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
   <title>Hum Landing Page</title>
 </head>
@@ -25,10 +26,12 @@
       <div class="login">Login</div>
     </div>
     <!-- End of Top bar -->
-
+    <!-- BG Image -->
+    <div class="bgImage"><img src="img/hsh-bg.png" alt="back ground image"></div>
+    <!-- End -->
     <!-- NavBar -->
   <nav class="navbar navbar-expand-lg navbar-light pt-0">
-    <a class="navbar-brand" href="#"><img src="img/logo-pink.svg" alt="hum-logo" height="50" width="268" id="humLogo" style="margin-left: 28.5rem;"></a>
+    <a class="navbar-brand" href="#"><img src="img/logo-pink.svg" alt="hum-logo" height="50" width="268" id="humLogo" style="margin-left: 28.5rem; margin-top: 10px;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -55,8 +58,7 @@
     </div>
   </nav>
 <!-- End of Navbar -->
-<!-- BG Image -->
-<div class="bgImage"><img src="img/hsh-bg.png" alt="back ground image"></div>
+<!-- Try Product Input -->
 <div class="row">
   <div class="col">
     <h1 class="sixDay">
@@ -65,35 +67,204 @@
       HAIR GUMMIES<br/>
     </h1>
     <div class="sweetTreat">
-      <p>A Sweet Treat For Naturally Stronger, Healthier Hair</p>
+      <p class="mb-0">A Sweet Treat For Naturally Stronger, Healthier Hair</p>
       <p>Plus $10 off code & Nutritionist report</p>
+      <div class="input-group mb-3">
+        <input type="email" class="form-control" placeholder="Enter your email address" aria-label="User Email" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn text-white" type="button">NEXT</button>
+        </div>
+      </div>
+    </div>   
+  </div>
+</div>
+<!-- End of input -->
+<!-- Why Use Hair Block -->
+<div class="hairBlock text-center">
+  <h2>WHY USE HAIR SWEET HAIR GUMMIES?</h2>
+  <P>Hair Sweet Hair works from the inside out to repair and care for hair at the root resulting in longer, stronger, healthier hair that naturally<br />looks good! We created the only hair gummy that uses all-natural and clinically proven ingredients that combine the best from modern<br />science and traditional medicine to get real results.</P>
+    <ul class="hearts">
+      <li><img src="img/p1.png" class="heartLi">PABA: Improves hair health and shine</li>
+      <li><img src="img/p2.png" class="heartLi">Fo-Ti: Assists in hair growth and boosts color</li>
+      <li><img src="img/p3.png" class="heartLi">Biotin: Strengthens and lengthens hair</li>
+      <li><img src="img/p4.png" class="heartLi">B Vitamins: Supports natural cell growth</li>
+      <li><img src="img/p5.png" class="heartLi">Organic Fruit Flavoring: Only 2 g natural sugar</li>
+    </ul>
+</div>
+<!-- End why use hair -->
+<!-- What makes hair sweet block -->
+<div class="hairSweet text-center">
+  <h2>WHAT MAKES HAIR SWEET HAIR UNIQUE?</h2>
+  <p>Hair Sweet Hair works from the inside out to repair and care for hair at the root resulting in longer, stronger, healthier hair that naturally<br />
+    looks good! We created the only hair gummy that uses all-natural and clinically proven ingredients that combine the best from modern<br /> science and traditional medicine to get real results.</p>
+    <div class="humNutrition">HUM NUTRITION</div>
+    <div class="otherBrandsText">OTHER BRANDS</div>
+    <div class="otherBrands"><img src="img/HSHimage.png" alt="Compare Image"></div>
+</div>
+<!-- end what makes hair sweet-->
+<!-- Customer Review -->
+<div class="container1">
+  <div class="row">
+    <div class="col text-center text-uppercase px-auto">
+      <h2>RAVE REVIEWS FROM CUSTOMERS</h2>
+    </div>
+  </div>
+  <div class="row d-block">
+     <div class="col-12 text-center py-3">
+       <img class="raveImg" src="img/layer-192.png" width="862" height="118" atl="customer's review">
+     </div>
+  </div>
+  <div class="rowGrid">
+    <div>
+      <p>I'd give it 10 stars if I could. These gummies are amazing!!!! They taste great and my hair is growing so fast.
+        <span class="d-block pinkSymbol ">@dcerasini</span>
+      </p><br><br>
+      <div class="stars1">
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+      </div>
+    </div>
+    <div>
+      <p>After a couple months, my hair has become fuller and my nails stronger. I look forward to taking these because of the results and taste (so yummy + low sugar)!
+        <span class="d-block pinkSymbol ">@PrettyManly</span>
+      </p>
+      <div class="stars2">
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+      </div>
+    </div>
+    <div>
+      <p>I'm obsessed - they taste amazing and I've definitely noticed my hair has been growing faster and feels fuller. I also love
+      that they are vegan.
+        <span class="d-block pinkSymbol ">@beautygal</span>
+      </p><br>
+      <div class="stars3">
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+      </div>
+    </div>
+    <div>
+      <p>I've been taking Hair Sweet Hair every day for a couple of weeks now. My very dry, frizzy curly hair is already softer
+        and shinier.
+        <span class="d-block pinkSymbol ">@sammyPA</span>
+      </p><br><br>
+      <div class="stars4">
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+        <span class="fa fa-star fa-lg" aria-hidden="true"></span>
+      </div>
     </div>
   </div>
 </div>
-
-
-
-
+<div class="howItWorks text-center">
+  <h2>HOW HAIR SWEET HAIR WORKS</h2>
+  <p class="vegan">Take two delicious vegan berry gummy hearts daily for best results!</p>
+  <div class="supFacts">
+    <img src="img/2-layers.png" alt="Supplement Facts">
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
+<!-- end of customer review -->
+<!-- As Seen on Magazine -->
+<div>
+  <p class="text-center asSeenIn">AS SEEN IN</p>
+</div>
+<div class="magazineImg">
+  <div><img src="img/us-weekly.png" alt="us-weekly"></div>
+  <div><img src="img/vogue.png" alt="vogue"></div>
+  <div><img src="img/harpers-bazaar.png" alt="harpers-bazaar"></div>
+  <div><img src="img/well-and-good.png" alt="well-and-good"></div>
+  <div><img src="img/glamour.png" alt="glamours"></div>
+  <div><img src="img/refinery-29.png" alt="refinery-29"></div>
+  <div><img src="img/marie-claire.png" alt="Marie Claire"></div>
+  <div><img src="img/in-style.png" alt="in-style"></div>
+</div>
+<!-- end Magizine -->
+<!-- Footer -->
+<footer>
+  <div class="container pageFooter">
+    <div class="row">
+      <div class="col-6 col-md-3">
+        <ul class="list-unstyled">
+          <li><a href="#" title="Get Started">Get Started</a></li>
+          <li><a href="#" title="Login to Account">Login to Account</a></li>
+          <li><a href="#" title="Refer A Friend">Refer A Friend</a></li>
+          <li><a href="#" title="Plan & Save">Plan & Save</a></li>
+          <li><a href="#" title="Products">Products</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md-3">
+        <ul class="list-unstyled">
+          <li><a href="#" title="Press">Press</a></li>
+          <li><a href="#" title="Product Philosophy">Product Philosophy</a></li>
+          <li><a href="#" title="Science">Science</a></li>
+          <li><a href="#" title="Our Nutritionists">Our Nutritionists</a></li>
+          <li><a href="#" title="Ask the Nutritionist">Ask the Nutritionist</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md-3">
+        <ul class="list-unstyled">
+          <li><a href="#" title="Contact HUM">Contact HUM</a></li>
+          <li><a href="#" title="Jobs at HUM">Jobs at HUM</a></li>
+          <li><a href="#" title="Wholesale Inquiries">Wholesale Inquiries</a></li>
+          <li><a href="#" title="Our Story">Our Story</a></li>
+          <li><a href="#" title="HUM Blog">HUM Blog</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md-3">
+        <ul class="list-unstyled">
+          <li><a href="#" title="FAQs">FAQs</a></li>
+          <li><a href="#" title="Free Shipping & Easy Returns"></a>Free Shipping & Easy Returns </li>
+          <li><a href="#" title="Privacy Policy">Privacy Policy</a></li>
+          <li><a href="#" title="Terms & Conditions">Terms & Conditions</a></li>
+        </ul>
+      </div>
+      </div>
+      <div class="row text-center px-5 pt-4">
+        <div class="col note-footer text-center">
+          <p>The information and content on this website is provided only for informational purposes. It is not meant in any way as a
+          substitute for the professional advice provided by your physician or any other healthcare professional. The statements
+          on this site have not been evaluated by the FDA. Our products are not intended to diagnose, treat, cure or prevent any
+          disease.<span class="d-block">Copyright © HUM Nutrition Inc. 2018.<a href="#" title="company"> Illustrations by Tim Bjørn</a></span>
+          </p>
+      </div>
+      </div>
+      <div class="row py-5">
+      <div class="col-9">
+        <img src="img/logo.svg" width="268"  height="40" atl="logo"/>
+      </div>
+      <div class="col-3 text-left align-self-end">
+        <a href="#" title="social"><span class="fa fa-facebook fa-lg px-2" aria-hidden="true"></span></a>
+        <a href="#" title="social"><span class="fa fa-twitter fa-lg px-2" aria-hidden="true"></span></a>
+        <a href="#" title="social"><span class="fa fa-instagram fa-lg px-2" aria-hidden="true"></span></a>
+        <a href="#" title="social"><span class="fa fa-youtube-play fa-lg px-2" aria-hidden="true"></span></a>
+      </div>
+      </div>
+      </div>
+    </footer>
+    <!-- end -->
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
     crossorigin="anonymous"></script>
+  <!-- <script>
+    for (let i = 0; i < 5; i++) {
+    document.qu('&#9733');
+    }
+  </script>   -->
 </body>
 
 </html>
