--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </div>
     <!-- End of Top bar -->
     <!-- BG Image -->
-    <div class="bgImage"><img src="img/hsh-bg.png" alt="back ground image"></div>
+    <!-- <div class="bgImage"><img src="img/hsh-bg.png" alt="back ground image"></div> -->
     <!-- End -->
     <!-- NavBar -->
   <nav class="navbar navbar-expand-lg navbar-light pt-0">
